--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 	<body>
 		<div id="container">
 			<div id="input_div">
-				<input type="text" required />
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					height="24px"
-					viewBox="0 -960 960 960"
-					width="24px"
-					fill="#fafafa">
-					<path
-						d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
-				</svg>
+				<input type="text" placeholder="Enter your city" required />
+				<button>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						height="24px"
+						viewBox="0 -960 960 960"
+						width="24px"
+						fill="#fafafa">
+						<path
+							d="M374.61-319.39q-112.12 0-189.87-77.83Q107-475.04 107-585q0-109.96 77.83-187.78 77.82-77.83 188.28-77.83 110.46 0 187.78 77.83 77.33 77.82 77.33 187.93 0 43.98-13.15 83.13-13.16 39.15-39.46 73.59l238.61 236.61q11.82 11.95 11.82 28.84 0 16.9-11.82 28.72-12.13 12.4-29.16 12.4t-28.41-12.4L529.04-371q-29.43 24.26-69.11 37.94-39.67 13.67-85.32 13.67Zm-.8-79.22q77.66 0 131.42-54.53Q559-507.67 559-585q0-77.33-53.85-131.86-53.85-54.53-131.34-54.53-78.33 0-132.96 54.53-54.63 54.53-54.63 131.86 0 77.33 54.55 131.86 54.55 54.53 133.04 54.53Z" />
+					</svg>
+				</button>
 			</div>
 
 			<div id="content">
