--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			</div>
 
 			<div id="content">
-				<h3>Weather in {}</h3>
-				<h2>{}°C</h2>
+				<span>Weather in {}</span>
+				<span>{}°C</span>
 			</div>
 		</div>
 	</body>
