style the loader component

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 			</div>
 		</div>
 
+		<div class="loader-wrapper">
+			<div class="loader"></div>
+		</div>
+
 		<script src="./script.js"></script>
 	</body>
 </html>
